# metadata-portal

./: .dockerignore  .eslintrc.js  .gitignore  .prettierignore  .rustfmt.toml  CNAME  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  asset-manifest.json  config-template.toml  config.toml  config_dev.toml  data.json  docker-compose.yml  index.html  package-lock.json  package.json  rust-toolchain  rust-toolchain.toml  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: actions.yml  auto-sign.yml  build.yml  check_updates.yml  cleaner.yml  cli-test.yml  deploy.yml  error-handler.yaml  frontend-test.yml  qr_generator.yml  qr_verifier.yml  rust-test.yml  rust.yml  test.yml  update-and-sign.yml  update-chains-file.yml  update.yml  verify-skip.yml  verify.yml
cli/: Cargo.toml  README.md
cli/src/: config.rs  ethereum.rs  export.rs  fetch.rs  file.rs  main.rs  opts.rs  qrs.rs  source.rs
cli/src/autosigner/: generate.rs  mod.rs
cli/src/chains_config/: mod.rs
cli/src/cleaner/: file.rs  mod.rs
cli/src/cleaner/for_tests/test1/: data.json
cli/src/cleaner/for_tests/test2/: data.json
cli/src/cleaner/for_tests/test3/: data.json
cli/src/cleaner/for_tests/test4/: data.json
cli/src/cleaner/for_tests/test5/: data.json
cli/src/collector/: export.rs  file.rs  metadata.rs  mod.rs
cli/src/collector/for_tests/: expected.json  polkadot_metadata_10.apng  polkadot_metadata_9.apng
cli/src/common/: camera.rs  mod.rs  path.rs  types.rs
cli/src/deployment_checker/: mod.rs
cli/src/lib/: camera.rs  mod.rs  path.rs  read.rs  string.rs
cli/src/signer/: mod.rs  prompt.rs
cli/src/updater/: export.rs  generate.rs  github.rs  metadata.rs  mod.rs  qr_file.rs  source.rs  wasm.rs
cli/src/utils/: camera.rs  types.rs
cli/src/verifier/: mod.rs  qr.rs
cli/tests/: test.rs
data/: chains.json  qrs.js
docs/: NOTES.md
public/: CNAME  data.json  index.html  manifest.json  portals.json  test-file.json
public/qr/: acala_metadata_2061.apng  acala_metadata_2063.apng  acala_metadata_2064.apng  acala_metadata_2081.apng  acala_metadata_2082.apng  acala_metadata_2083.apng  acala_metadata_2091.apng  acala_metadata_2092.apng  acala_metadata_2093.apng  acala_metadata_2095.apng  acala_metadata_2096.apng  acala_metadata_2101.apng  acala_metadata_2110.apng  acala_metadata_2120.apng  aleph-node_metadata_12.apng  aleph-node_metadata_39.apng  aleph-node_metadata_46.apng  aleph-node_metadata_47.apng  aleph-node_metadata_58.apng  aleph-node_metadata_59.apng  alphanet_metadata_7.apng  altair_metadata_1011.apng  altair_metadata_1013.apng  altair_metadata_1014.apng  altair_metadata_1015.apng  altair_metadata_1016.apng  altair_metadata_1018.apng  altair_metadata_1020.apng  altair_metadata_1021.apng  altair_metadata_1023.apng  altair_metadata_1024.apng  altair_metadata_1025.apng  altair_metadata_1026.apng  altair_metadata_1027.apng  altair_metadata_1034.apng  amplitude_metadata_1.apng  amplitude_metadata_2.apng  amplitude_metadata_3.apng  amplitude_metadata_4.apng  amplitude_metadata_6.apng  (+1322 more)
public/qr_dev/: acala_metadata_2095.apng  acala_metadata_latest.apng  altair_metadata_1021.apng  altair_metadata_latest.apng  astar_metadata_35.apng  (+50 more)
qr/: kusama-bridge-hub-kusama_metadata_1002004.apng  kusama-bridge-hub-kusama_metadata_1004000.apng  kusama-bridge-hub-kusama_metadata_1006001.apng  kusama-bridge-hub-kusama_metadata_1009001.apng  kusama-bridge-hub-kusama_metadata_2000004.apng  kusama-bridge-hub-kusama_metadata_latest.apng  kusama-coretime-kusama_metadata_1003000.apng  kusama-coretime-kusama_metadata_1006000.apng  kusama-coretime-kusama_metadata_1007001.apng  kusama-coretime-kusama_metadata_2000004.apng  kusama-coretime-kusama_metadata_2000006.apng  kusama-coretime-kusama_metadata_2000007.apng  kusama-coretime-kusama_metadata_latest.apng  kusama-encointer-parachain_metadata_1002000.apng  kusama-encointer-parachain_metadata_1002004.apng  kusama-encointer-parachain_metadata_1002005.apng  kusama-encointer-parachain_metadata_1003004.apng  kusama-encointer-parachain_metadata_1005001.apng  kusama-encointer-parachain_metadata_1006001.apng  kusama-encointer-parachain_metadata_1007001.apng  kusama-encointer-parachain_metadata_1009001.apng  kusama-encointer-parachain_metadata_16.apng  kusama-encointer-parachain_metadata_2000000.apng  kusama-encointer-parachain_metadata_2001000.apng  kusama-people-kusama_metadata_1003000.apng  kusama-people-kusama_metadata_1003003.apng  kusama-people-kusama_metadata_1006001.apng  kusama-people-kusama_metadata_1007001.apng  kusama-people-kusama_metadata_2000006.apng  kusama-people-kusama_metadata_2000007.apng  kusama-people-kusama_metadata_latest.apng  kusama-statemine_metadata_1001000.apng  kusama-statemine_metadata_1001002.apng  kusama-statemine_metadata_1002000.apng  kusama-statemine_metadata_1002004.apng  kusama-statemine_metadata_1004000.apng  kusama-statemine_metadata_1004003.apng  kusama-statemine_metadata_1006000.apng  kusama-statemine_metadata_1006001.apng  kusama-statemine_metadata_1009001.apng  (+185 more)
rust/: .gitignore  Cargo.toml
rust/app_config/: Cargo.toml
rust/app_config/src/: lib.rs
rust/cleaner/: Cargo.toml  readme.md
rust/cleaner/src/: lib.rs  main.rs
rust/collector/: Cargo.toml
rust/collector/src/: export.rs  lib.rs  main.rs  metadata.rs
rust/qr_generator/: Cargo.toml  config.toml  readme.md
rust/qr_generator/src/: config.rs  error.rs  export.rs  helpers.rs  lib.rs  main.rs  metadata.rs  metadata_shortcut.rs  qr.rs  qr_file.rs
rust/qr_lib/: Cargo.toml
rust/qr_lib/src/: camera.rs  filename.rs  fs.rs  lib.rs  path.rs  read.rs  string.rs
rust/qr_verifier/: Cargo.toml  readme.md
rust/qr_verifier/src/: camera.rs  lib.rs  main.rs
rust/signer/: Cargo.toml  readme.md
rust/signer/src/: lib.rs  main.rs  prompt.rs
rust/updater/: Cargo.toml
rust/updater/src/: export.rs  lib.rs  main.rs  metadata.rs  qr_file.rs
rust/verifier/: Cargo.toml
rust/verifier/src/: lib.rs  main.rs
site/: .eleventy.js  package.json  tailwind.config.js
src/: chains.json  constants.ts  data.ts  icons.ts  index.css  index.tsx  scheme.ts  utils.ts
(+291 files in other folders)
