[package]
authors = ["Pavel Rybalko <pavel@parity.io>"]
description = "metadata portal cli is a utility that works on WASM Runtime of Substrate based chains"
edition = "2021"
homepage = "https://github.com/paritytech/metadata-portal"
keywords = ["substrate", "blockchain", "metadat", "signer"]
license = "MIT"
name = "metadata-cli"
readme = "README.md"
repository = "https://github.com/paritytech/metadata-portal"
version = "0.1.0"

[dependencies]
assert_cmd = "2.0"
clap = {version = "3.2.22", features = ["derive", "env", "unicode", "cargo"]}
env_logger = "0.9"
log = "0.4"
anyhow = "1.0"
toml = "0.5"
serde = { version = "^1.0.87", features = ["derive"] }
dialoguer = "0.10"
qr_reader_phone = {git = "https://github.com/paritytech/parity-signer", rev = "bb8ef5c"}
qr_reader_pc = {git = "https://github.com/paritytech/parity-signer", rev = "bb8ef5c"}
definitions = {git = "https://github.com/paritytech/parity-signer", rev = "bb8ef5c"}
generate_message = {git = "https://github.com/paritytech/parity-signer", rev = "bb8ef5c"}
transaction_parsing = {git = "https://github.com/paritytech/parity-signer", rev = "bb8ef5c"}
tempfile = "3.3"
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, features = ["full_crypto"]}
parity-scale-codec = {version = "3.2.1"}
image = "0.24.4"
quircs = "0.10"
hex = "0.4"
indicatif = "0.17"
serde_json = "^1.0.87"
octocrab = "0.17"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"]}
png = "0.17.5"
blake2-rfc = "0.2.18"
# Hash table which preserves insertion order
indexmap = {version="1", features=["serde"]}

[dependencies.opencv]
version = "0.71"
default-features = false
features = ["videoio", "imgproc", "highgui"]
