[package]
name = "app_config"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "app_config"
crate-type = ["lib"]