[package]
name = "cleaner"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_config = {path = "../app_config"}
qr_lib = {path = "../qr_lib"}
anyhow = "1.0.42"
clap = { version = "3.0.1", features = ["derive"] }
