[package]
name = "collector"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_config = {path = "../app_config"}
qr_lib = {path = "../qr_lib"}
qrcode_rtx = {git = "https://github.com/paritytech/parity-signer"}
definitions = {git = "https://github.com/paritytech/parity-signer"}
constants = {git = "https://github.com/paritytech/parity-signer"}
qrcode_static = {git = "https://github.com/paritytech/parity-signer"}
generate_message = {git = "https://github.com/paritytech/parity-signer"}
anyhow = "1.0.42"
hex = "0.4.3"
toml = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.1", features = ["derive"] }
