[package]
name = "qr_generator"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
qrcode_rtx = {path = "../qrcode_rtx"}
meta_reading = {path = "../meta_reading"}
definitions = {path = "../definitions"}
anyhow = "1.0.42"
toml = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.1", features = ["derive"] }
