[package]
name = "qr_lib"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
qr_reader_phone = {git = "https://github.com/paritytech/parity-signer", branch = "add-progress-bar"}
qr_reader_pc = {git = "https://github.com/paritytech/parity-signer", branch = "add-progress-bar"}
image = "0.23.14"
quircs = "0.10.0"
hex = "0.4.3"
indicatif = "0.16.2"

[lib]
name = "qr_lib"
crate-type = ["lib"]

[dependencies.opencv]
version = "0.60"
default-features = false
features = ["clang-runtime", "videoio", "imgproc", "highgui"]
