[package]
name = "signer"
version = "0.2.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_config = {path = "../app_config"}
qr_lib = {path = "../qr_lib"}
anyhow = "1.0.42"
dialoguer = "0.9.0"
indicatif = "0.16.2"
clap = { version = "3.0.1", features = ["derive"] }
qr_reader_pc = {git = "https://github.com/paritytech/parity-signer"}
definitions = {git = "https://github.com/paritytech/parity-signer"}
generate_message = {git = "https://github.com/paritytech/parity-signer"}
transaction_parsing = {git = "https://github.com/paritytech/parity-signer"}
parity-scale-codec = "2.2.0"
image = "0.23.14"
quircs = "0.10.0"
hex = "0.4.3"
