[package]
name = "updater"
version = "0.1.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_config = {path = "../app_config"}
qr_lib = {path = "../qr_lib"}
definitions = {git = "https://github.com/paritytech/parity-signer"}
generate_message = {git = "https://github.com/paritytech/parity-signer"}
anyhow = "1.0.42"
hex = "0.4.3"
clap = { version = "3.0.1", features = ["derive"] }
