[package]
name = "verifier"
version = "0.2.0"
authors = ["vera"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_config = {path = "../app_config"}
qr_lib = {path = "../qr_lib"}
definitions = {git = "https://github.com/paritytech/parity-signer"}
transaction_parsing = {git = "https://github.com/paritytech/parity-signer"}
anyhow = "1.0.42"
clap = { version = "3.0.1", features = ["derive"] }
hex = "0.4.3"
sp-core = "3.0.0"
sp-runtime = "3.0.0"
